# miden-gol-wasm

./: README.md  package.json
miden-wasm/: Cargo.toml
miden-wasm/src/: gol.masm  lib.rs
public/: index.html
src/: App.tsx  index.tsx
