[package]
name = "miden-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.78"
console_error_panic_hook = { console_error_panic_hook = "0.1.7" }
miden = { git = "https://github.com/maticnetwork/miden", branch = "next", package = "miden", default-features = false}
wasm-bindgen-test = "0.3.0"